<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/PPR_FULL_WHITE"
    android:padding="8dp">

    <TextView
        android:id="@+id/room_category"
        fontPath="fonts/Lato-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:ems="13"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/deluxe_room"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix"
         />

    <ImageView
        fontPath="fonts/Lato-Light.ttf"
        android:id="@+id/wifi_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/room_category"
        app:layout_constraintTop_toBottomOf="@+id/room_category"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/Lato-Regular.ttf"
        android:id="@+id/wifi_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/free_wifi"
        android:layout_marginLeft="5dp"
        android:textColor="#757575"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/wifi_image"
        app:layout_constraintLeft_toRightOf="@+id/wifi_image"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/room_price"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/dummy_price2"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/room_category"
        app:layout_constraintRight_toRightOf="parent"
         />

    <TextView
        fontPath="fonts/Lato-Regular.ttf"
        android:id="@+id/per_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_night"
        android:textSize="10sp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="#757575"
        app:layout_constraintTop_toBottomOf="@+id/room_price"
        tools:ignore="MissingPrefix"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <TextView
        android:id="@+id/select_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_remove_rooms"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="@id/per_night"
        app:layout_constraintTop_toBottomOf="@id/per_night" />

    <Button
        android:id="@+id/select_room_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_button"
        android:minHeight="12dp"
        android:minWidth="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:text="@string/select_room"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintRight_toRightOf="@+id/select_room"
        app:layout_constraintTop_toBottomOf="@+id/select_room" />

    <LinearLayout
        android:id="@+id/book_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="@+id/select_room"
        app:layout_constraintTop_toBottomOf="@+id/select_room">

        <Button
            android:id="@+id/subtract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/round_button"
            android:minHeight="12dp"
            android:minWidth="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="-"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible"
             />


        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/round_button"
            android:minHeight="12dp"
            android:minWidth="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="+"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible"
             />

    </LinearLayout>


    <TextView
        fontPath="fonts/Lato-Regular.ttf"
        android:id="@+id/selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        app:layout_constraintLeft_toLeftOf="@+id/room_category"
        app:layout_constraintTop_toBottomOf="@id/wifi_image"
        tools:text="2 rooms selected"
        tools:ignore="MissingPrefix" />

</androidx.constraintlayout.widget.ConstraintLayout>